# ace

./: .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  ace_errcode.c  ace_errcode.h  ace_fs.c  ace_fs.h  ace_index_filesize.c  ace_index_filesize.h  ace_string.c  ace_string.h  main.c
test/: Makefile.am  ace_testutil_fs.c  ace_testutil_fs.h  ace_testutil_stringlist.c  ace_testutil_stringlist.h  check_ace_fs.c  check_ace_fs.h  check_ace_index_filesize.c  check_ace_index_filesize.h  check_ace_string.c  check_ace_string.h  check_ace_testsuite.c
